[project]
name = "ck-sync-server"
version = "0.1.0"
description = "Chronicle Keeper sync server — data CRUD + auth, no transcription/LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic>=2.12.2",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.37.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
