[project]
name = "ck-sync-server"
version = "0.2.0"
description = "Chronicle Keeper sync server — offline-first multi-device sync (POST /sync)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic>=2.12.2",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.37.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ship the `app/` package (its name doesn't match the distribution name).
[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
